--- a/views/trial.ejs
+++ b/views/trial.ejs
@@ -10,17 +10,22 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <script src="/public/scripts/webgazer.js"></script>
+        <script src="/public/scripts/webgazerHandler.js"></script>
         <!-- Favicon -->
         <link rel="icon" href="/public/assets/favicon.webp" type="image/x-icon">
         <!-- Page Title -->
         <title>Security Control Simulation System</title>
     </head>
 <script>
+    window.onload = function() {
+        resumeWebGazer();
+    }
     var packetArray = JSON.parse('<%- packetArray %>');
     var conditionText = "<%= conditionText %>";
     var group = "<%= group %>";
     var censoredInfo = "<%= censorship %>";
     var censoredArrayNumber = parseInt('<%= censoredArrayNumber %>');
+
     
 </script>
 
