--- a/views/description.ejs
+++ b/views/description.ejs
@@ -10,17 +10,15 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <script src="/public/scripts/webgazer.js"></script>
-        <script src="/public/scripts/webgazerHandler.js"></script>
+        <!-- <script src="/public/scripts/webgazerHandler.js"></script> -->
         <!-- Favicon -->
         <link rel="icon" href="/public/assets/favicon.webp" type="image/x-icon">
         <!-- Page Title -->
         <title>Security Control Simulation System</title>
-        <script>
-            var webGazerInit = false;
-        </script>
+
     </head>
 
-<body onload="initialiseWebGazer()">
+<body>
     <!-- Navigation Bar -->
     <nav class="custom-navbar">
         <div class="navbar-logo">
@@ -41,12 +39,24 @@
 </body>
 <script>
     document.getElementById("proceedToRules").addEventListener("click", () => {
-        if (webGazerInit) {
-            pauseWebGazer();
-            window.location.href = '/information/rules';
-        } else {
-            window.alert("Please wait to provide consent for the webcam access")
-        }
+        window.location.href = '/information/rules';
+    })
+    document.addEventListener('DOMContentLoaded', async () => {
+        webgazer.setRegression('ridge')
+                .setGazeListener(function(data, elapsedTime) {
+                    if (data == null || !data.x || !data.y) {
+                        return;
+                    }
+                    const x = data.x;
+                    const y = data.y;
+
+                    // checkGazeSection(x,y);
+                    console.log(`x = ${x} ---- y = ${y}`);
+                })
+                .showVideo(false)
+                .showPredictionPoints(false)
+                .begin()
+
     })
 </script>
 </html>
