--- a/views/webgazerConfig.ejs
+++ b/views/webgazerConfig.ejs
@@ -9,7 +9,7 @@
         .calibration-point {
             width: 10px;
             height: 10px;
-            background-color: red;
+            background-color: green;
             position: absolute;
             cursor: pointer;
         }
@@ -37,10 +37,9 @@
     <div id="overlay"></div>
     <div id="section-text"></div>
     <!-- Calibration Points -->
-    <!-- Top-Left Segment (Dice 5 pattern) -->
+    <!-- Top-Left Segment (Dice 4 pattern) -->
     <div id="calibrationPoint1" class="calibration-point" style="left: 11.1%; top: 12.5%;"></div>
     <div id="calibrationPoint2" class="calibration-point" style="left: 22.2%; top: 12.5%;"></div>
-    <div id="calibrationPoint3" class="calibration-point" style="left: 16.6%; top: 25%;"></div>
     <div id="calibrationPoint4" class="calibration-point" style="left: 11.1%; top: 37.5%;"></div>
     <div id="calibrationPoint5" class="calibration-point" style="left: 22.2%; top: 37.5%;"></div>
 
@@ -48,17 +47,15 @@
     <div id="calibrationPoint6" class="calibration-point" style="left: 38.8%; top: 25%;"></div>
     <div id="calibrationPoint7" class="calibration-point" style="left: 61.1%; top: 25%;"></div>
 
-    <!-- Top-Right Segment (Dice 5 pattern) -->
+    <!-- Top-Right Segment (Dice 4 pattern) -->
     <div id="calibrationPoint8" class="calibration-point" style="left: 72.2%; top: 12.5%;"></div>
     <div id="calibrationPoint9" class="calibration-point" style="left: 83.3%; top: 12.5%;"></div>
-    <div id="calibrationPoint10" class="calibration-point" style="left: 77.7%; top: 25%;"></div>
     <div id="calibrationPoint11" class="calibration-point" style="left: 72.2%; top: 37.5%;"></div>
     <div id="calibrationPoint12" class="calibration-point" style="left: 83.3%; top: 37.5%;"></div>
 
-    <!-- Bottom-Left Segment (Dice 5 pattern) -->
+    <!-- Bottom-Left Segment (Dice 4 pattern) -->
     <div id="calibrationPoint13" class="calibration-point" style="left: 11.1%; top: 62.5%;"></div>
     <div id="calibrationPoint14" class="calibration-point" style="left: 22.2%; top: 62.5%;"></div>
-    <div id="calibrationPoint15" class="calibration-point" style="left: 16.6%; top: 75%;"></div>
     <div id="calibrationPoint16" class="calibration-point" style="left: 11.1%; top: 87.5%;"></div>
     <div id="calibrationPoint17" class="calibration-point" style="left: 22.2%; top: 87.5%;"></div>
 
@@ -66,10 +63,9 @@
     <div id="calibrationPoint18" class="calibration-point" style="left: 38.8%; top: 75%;"></div>
     <div id="calibrationPoint19" class="calibration-point" style="left: 61.1%; top: 75%;"></div>
 
-    <!-- Bottom-Right Segment (Dice 5 pattern) -->
+    <!-- Bottom-Right Segment (Dice 4 pattern) -->
     <div id="calibrationPoint20" class="calibration-point" style="left: 72.2%; top: 62.5%;"></div>
     <div id="calibrationPoint21" class="calibration-point" style="left: 83.3%; top: 62.5%;"></div>
-    <div id="calibrationPoint22" class="calibration-point" style="left: 77.7%; top: 75%;"></div>
     <div id="calibrationPoint23" class="calibration-point" style="left: 72.2%; top: 87.5%;"></div>
     <div id="calibrationPoint24" class="calibration-point" style="left: 83.3%; top: 87.5%;"></div>
     <script src="/public/scripts/calibration.js"></script>
