--- a/views/webgazerConfig.ejs
+++ b/views/webgazerConfig.ejs
@@ -38,7 +38,7 @@
     <div id="section-text"></div>
     <!-- Calibration Points -->
     <!-- Top-Left Segment (Dice 4 pattern) -->
-    <div id="calibrationPoint1" class="calibration-point" style="left: 11.1%; top: 12.5%;"></div>
+    <!-- <div id="calibrationPoint1" class="calibration-point" style="left: 11.1%; top: 12.5%;"></div> -->
     <div id="calibrationPoint2" class="calibration-point" style="left: 22.2%; top: 12.5%;"></div>
     <div id="calibrationPoint4" class="calibration-point" style="left: 11.1%; top: 37.5%;"></div>
     <div id="calibrationPoint5" class="calibration-point" style="left: 22.2%; top: 37.5%;"></div>
