styled webgazer config view and removed redundant services

--- a/views/description.ejs
+++ b/views/description.ejs
@@ -27,8 +27,18 @@
 
     </nav>
 
+    <!-- modal for instructions for webgazer calibration -->
+    <div id="modal" style="display: none; z-index: 1; width:100%; height:100%;">
+        <section class="info text-center">
+            <h1>WebGazer Eye Tracking Calibration</h1>
+            <h2>Please allow webcam access before starting the calibration.</h2>
+            <p>For optimum performance of the eye tracking software, please click on each green square 5 times whilst looking directly at it until it turns red.</p>
+            <button type="button" id="continue">Continue</button>
+        </section>
+    </div>
+
     <!-- Scenarios Links Container -->
-    <div class="info">
+    <div class="info" id="description">
         <h1>Task Description</h1>
         <h3>
             Hello there! You are a cyber defense expert tasked with protecting a network by classifying incoming requests as "Trusted", "Suspect", or "Hostile" based on provided rules. Misclassifications may lead to a security breach or hinder other staff members from accessing the data needed for their jobs.
@@ -39,7 +49,13 @@
 </body>
 <script>
     document.getElementById("proceedToConfigWebGazer").addEventListener("click", () => {
-        window.location.href = '/information/webgazerconfig';
+        document.getElementById("description").style.display = "none";
+        document.getElementById("modal").style.display = "block";
+        document.getElementById("continue").addEventListener("click", () => {
+            window.location.href = '/information/webgazerconfig';
+        })
+        
+        
     })
 </script>
 </html>
