--- a/views/webgazerConfig.ejs
+++ b/views/webgazerConfig.ejs
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebGazer Test</title>
     <script src="/public/scripts/webgazer.js" type="text/javascript"></script>
-    <style src="/public/css/style.css"></style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="/public/css/style.css" rel="stylesheet">
     <style>
         .calibration-point {
             width: 15px;
@@ -13,15 +14,6 @@
             background-color: green;
             position: absolute;
             cursor: pointer;
-        }
-        #instrctions {
-            /* position: absolute;
-            top:50%;
-            left:50%; */
-            width: 300px;
-            height: 100px;
-            font-size: larger;
-            font-weight: bolder;
         }
     </style>
 </head>
@@ -33,12 +25,10 @@
         </div>
 
     </nav>
-    <section class="info">
-        <h1>WebGazer Eye Tracking Test</h1>
-        <div id="instructions">For optimum performane of the eye tracking software, please click on each green sqaure 5 times whilst looking directly at it until it turns red.</div>
+    <section>
         <!-- Calibration Points -->
         <!-- Top-Left Segment (Dice 4 pattern) -->
-        <!-- <div id="calibrationPoint1" class="calibration-point" style="left: 11.1%; top: 12.5%;"></div> -->
+        <div id="calibrationPoint1" class="calibration-point" style="left: 11.1%; top: 12.5%;"></div>
         <div id="calibrationPoint2" class="calibration-point" style="left: 22.2%; top: 12.5%;"></div>
         <div id="calibrationPoint4" class="calibration-point" style="left: 11.1%; top: 37.5%;"></div>
         <div id="calibrationPoint5" class="calibration-point" style="left: 22.2%; top: 37.5%;"></div>
